chore: 불변 리스트로 리턴하도록 변경